@@ -16,8 +16,8 @@
  * Free Software Foundation, Inc., 59 Temple Place, Suite 330,
  * Boston, MA 02111-1307, USA.
  */
-#ifndef __G_NOTIFY_H__
-#define __G_NOTIFY_H__
+#ifndef __G_OBJECT_NOTIFY_QUEUE_H__
+#define __G_OBJECT_NOTIFY_QUEUE_H__
 
 #include        <string.h> /* memset */
 #include        <glib-object.h>
@@ -166,4 +166,4 @@ g_object_notify_queue_from_object (GObject              *object,
 
 G_END_DECLS
 
-#endif /* __G_NOTIFY_H__ */
+#endif /* __G_OBJECT_NOTIFY_QUEUE_H__ */
